package HolStructure;

syntax = "proto3";


message holStructure 
{
    string manufacturerID = 1;
    string liqType = 2;
    string bottleID = 3;
    string dateMfr = 4;

    string stockistID = 5;
    string stockistEntry = 6;
    string stockistExit = 7;

    string warehouseID = 8;
    string wareEntry = 9;
    string wareExit = 10;

    string posID = 11;
    string posEntry = 12;
    string posSale = 13;

}